--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
         <activity android:name=".Activites.ChatScreen"></activity>
         <activity android:name=".Activites.ChatList" />
         <activity android:name=".Activites.RegisterActivity" />
