--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,13 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.dhaval2404:imagepicker:1.7.5'
+    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'id.zelory:compressor:2.1.0'
+    implementation "androidx.work:work-runtime:2.4.0"
 
 }
