Added a Profile Pic View Activity for viewing the profile pic of the chat user.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:roundIcon="@drawable/app_image"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
-        <activity android:name=".Activites.AllUsers"></activity>
+        <activity
+            android:name=".Activites.ProfilePictureView"
+            android:exported="true" />
+        <activity android:name=".Activites.AllUsers" />
         <activity
             android:name=".Activites.RegisterActivity"
             android:screenOrientation="portrait"
